# EP_balance

./: .gitignore  README.md  pyproject.toml
eplb/: __init__.py  algorithm.py  config.py  distributed.py  loads.py  metrics.py  plan.py  problem.py  topology.py  triton_solve.py
eplb/integration/: __init__.py  comm.py  dispatcher.py  grouped_mlp.py  hooks.py  megatron.py  megatron_moe.py  overlap.py  physical.py  profiling.py  rebalancer.py  sync_free.py
examples/: megatron_eplb_hook.py
scripts/: README.md  convert_hf_to_mcore.sh  install_deepep.sh  install_megatron.sh  prepare_data.sh  pretrain_eplb_moe.py  run_gb200_4x4.sh  run_phaseB.sh  run_phaseC.sh  run_real_moe.sh
sim/: __init__.py  run_dist.py  run_sim.py  walkthrough.py  workload.py
tests/: conftest.py  test_bisect.py  test_constraints.py  test_determinism.py  test_gpu_solver.py  test_grouped_mlp.py  test_metrics.py  test_phase_c.py  test_physical_routing.py  test_sync_free.py
