[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scale-eplb"
version = "0.1.0"
description = "Scale-EPLB: deterministic, CPU-sync-free Expert-Parallelism Load Balancer via expert replication for heterogeneous (NVLink + RDMA) topologies."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Offline MILP oracle (gap measurement). Not required for the runtime solver.
oracle = ["ortools>=9.7"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["eplb*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
